# openssl-tools

./: .agent-config.json  .env.template  .gitignore  ACTUAL_WORKFLOW_STATUS.md  ARTIFACTS_REVIEW_SUMMARY.md  BUILD_CACHE_README.md  CHANGELOG.md  CICD_IMPLEMENTATION_PLAN.md  CLAUDE.md  CMakePresets.json  COMPREHENSIVE-VALIDATION-REPORT.md  CONAN-2X-CONSOLIDATION-SUMMARY.md  CONAN-GITHUB-PACKAGES-SETUP.md  CONAN-PYTHON-ENVIRONMENT.md  DEVELOPMENT_PATTERNS.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  Dockerfile.dev  EXPERT_ANALYSIS_IMPLEMENTATION_SUMMARY.md  EXPERT_IMPLEMENTATION_FINAL_STATUS.md  EXTENDED_REALITY_CHECK_REPORT.md  FAST_BUILD_README.md  FINAL_COMPLETION_REPORT.md  FINAL_QUEUE_STATUS_UPDATE.md  FINAL_STATUS_UPDATE.md  IMMEDIATE-FIXES-STATUS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TESTING_RESULTS.md  IMPLEMENTED_FEATURES.md  LICENSE  MIGRATION-GUIDE.md  MODULE-INTEGRATION-SUMMARY.md  Makefile  PHASE1_COMPLETE.md  PHASE1_STATUS.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PR_SUCCESS_REPORT.md  QUEUE_MONITORING_UPDATE.md  (+100 more)
.cursor/: README-cli-config.md  README-cli-integration.md  README.md  TROUBLESHOOTING.md  cli-config.json  cli.json  mcp-servers.json  mcp.json
.cursor-template/: README.md
.cursor/.agent-tools/: 316fd124-d210-4497-b8b8-df30b8a9812e.txt
.cursor/agents/: ci-repair-agent.yml
.cursor/commands/: README.md  build-commands.json  build-commands.md  conan-commands.json  conan-commands.md  database-commands.json  development-commands.json  openssl-commands.json  registry-commands.json
.cursor/rules/: build-commands.mdc  ci-cd-dependency-integration.mdc  cicd-modernization.mdc  conan-commands.mdc  conan-extension-pattern.mdc  conan-version-management.mdc  dependency-management.mdc  directory-structure.mdc  layered-architecture.mdc  mcp-orchestrator-integration.mdc  python-automation.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  README-WORKFLOW-SEPARATION.md  REUSABLE_WORKFLOWS_README.md  WORKFLOWS.md  WORKFLOW_BATCH_STATUS.md  WORKFLOW_CONFIGURATION.md  WORKFLOW_FIXES_REPORT.md  WORKFLOW_STATUS.md  branch-protection.md  ci.md  migration-config.yml
.github/workflow-templates/: openssl-build.properties.json  openssl-build.yml
.github/workflows/: README.md  ci.yml  (+111 more)
.github/workflows-archive/: basic-openssl-integration-test.yml  bootstrap-verification.yml  build-openssl.yml  cache-test.yml  cache-warmup.yml  component-development.yml  core-ci.yml  development-workflow-orchestrator.yml  e2e-windows-openssl.yml  jfrog-artifactory.yml  lightweight-check.yml  mcp-validation.yml  openssl-build-publish.yml  openssl-ci-reusable.yml  openssl-consumer-validation.yml  openssl-integration.yml  os-zoo.yml  performance-benchmark.yml  pr-validation.yml  publish-cloudsmith.yml  reusable-security-scan-enhanced.yml  run_quic_interop.yml  secure-cross-repo-trigger.yml  security-review.yml
.github/workflows-disabled-backup/: README.md
OpenSSL-Query/: README.md
conan/: artifactory_functions.py  conan_functions.py
conan-dev/: activate  artifact-lifecycle.yml  cache-optimization.yml  ci-config.yml  conan.conf  global.conf  openssl_build_matrix.json  package-registries.yml  platform-config.yml  registry-versioning.yml  secure-key-management.yml  validation-config.yml
conan-profiles/: ci-macos-arm64.profile  ci-macos-universal.profile  ci-windows-msvc.profile  fips-linux.profile  fips-windows.profile  optimized-cache.profile
conan_tools/: __init__.py  artifactory_functions.py  ci-config.yml
conf/: 1_artifactory.yaml  launcher.yaml
config/: build-profiles.json
core/: artifactory_handler.py
docker/: Dockerfile.macos-builder  Dockerfile.ubuntu-builder  Dockerfile.ubuntu-builder-fast  Dockerfile.windows-builder  docker-compose.fast.yml  docker-compose.yml
docs/: CONTRIBUTING.md  README.md  WORKFLOW_MANAGEMENT.md  agent-loop-documentation-en.md  agent-loop-documentation.md  ci-cd-guide.md  cursor-agent-setup.md  mcp-workflow-integration.md  migration-guide.md  openssl-database-validation.md  python-structure-improved.md  python-structure.md
examples/: openssl_conan_example.py
experimental/: README.md  requirements.txt
extensions/: __init__.py
github-tools/: Tento počítač – zástupce.lnk
launcher/: __init__.py  conan_launcher.py  openssl_developer_buddy_launcher.py
openssl-config/: embedded-build.json  fips-government.json  general-build.json
openssl-crypto/: component-info.json  conanfile.py
openssl-migration/: MIGRATION_SUMMARY.md  README.md  __init__.py  cli.py  demo.py  requirements.txt  setup.py
openssl-ssl/: component-info.json  conanfile.py
openssl-tools/: component-info.json  conanfile.py
openssl_tools/: __init__.py
scripts/: CI_STANDARDIZATION_SUMMARY.md  README.md  analyze-workspace.sh  analyze_rebuilds.py  automated_publish.py  bootstrap-init.py  build-all-platforms-now.sh  build-openssl-local.sh  build-python-environment-minimal.py  build-python-environment-simple.py  build-python-environment.py  build_matrix_generator.py  cleanup-repository.sh  consolidate-workflows.sh  create-github-release.py  cursor-agents-coordinator.sh  demo-build-cache.py  deploy-ci.sh  dev-setup.sh  disable-problematic-workflows.py  disable-redundant-workflows.sh  docker-build-and-upload.sh  fast-build-and-upload.sh  fix-cache-entries.py  fix-workflows.py  github_workflow_fixer.py  openssl-conan-init.py  pr-workflow-fix-enhanced.sh  quick-start.sh  quick_wins.sh  requirements.txt  sbom_generator.py  setup-advanced-cicd.py  setup-ci-environment.py  setup-complete.sh  setup-conan-dev-env.py  setup-credentials.sh  setup-environment.sh  setup-fuzz-corpora-conan.py  setup-fuzz-corpora.py  (+30 more)
src/: configure.py  configure.py.backup  mkbuildinf.py  mkerr.py  mkinstallvars.py  paramnames.py
test_consumer/: conanbuild.sh  conanbuildenv.sh  conanrun.sh  conanrunenv.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
test_package/: conanfile.py  deactivate_conanrunenv-release-x86_64.sh
tests/: __init__.py  test_review_tools.py
tools/: deploy_dev.py  graph_analyzer.py
(+334 files in other folders)
