[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openssl-tools"
version = "0.1.0"
description = "OpenSSL CI/Conan automation tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "sparesparrow" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
openssl-tools = "openssl_tools.cli:main"
